# SkyFinance

./: .gitignore  CLAUDE.md  LICENSE  README.md  package-lock.json
backend-python/: .env.example  .gitignore  Dockerfile  Procfile  README.md  mypy.ini  pyproject.toml  railway.json  ruff.toml
backend-python/.github/workflows/: ci.yml
backend-python/docker/: api.Dockerfile  docker-compose.yml  worker.Dockerfile
backend-python/docs/: API_CONTRACT.md  DECISION_SECRETS_MANAGER.md  DR_RUNBOOK.md  FASE11_DEPLOY_CHECKLIST.md  FASE12_CLOSURE_PLAN.md  FASE6_CLOSURE_PLAN.md  FASE7_CLOSURE_PLAN.md  HANDOVER_FASE_9.md  MIGRATION_13_PHASES.md  POST_CUTOVER_CLOSURE.md  REMEDIATION_P0_P3.md  RUNBOOK_KEY_ROTATION.md  SECURITY.md  SPRINT_BCI_SCRAPER_REWORK.md  SPRINT_CATEGORIZACION_APRENDE.md  SPRINT_INGESTA_BCHILE_AUTH0.md
backend-python/docs/archive/: FASE10_CLOSURE_PLAN.md  FASE11_CLOSURE_PLAN.md  FASE7_CLOSURE_PLAN.md  FASE9_CLOSURE_PLAN.md  POST_CUTOVER_AUDIT.md  POST_CUTOVER_DEBUG_AUDIT.md  POST_CUTOVER_PLAN.md  README.md  SPRINT_CORS_DEBUG_PROMPT.md  SPRINT_DEBUG_E2E_PROMPT.md  SPRINT_FASE_6_7_PROMPT.md  SPRINT_PHASE_C_DOCKER_FIX_PROMPT.md  SPRINT_POSTCUTOVER_BANKING_REVIVAL.md  SPRINT_POST_CUTOVER_PROMPT.md  SPRINT_SCRAPERS_P0.md
backend-python/migrations/: 000_immediate_fixes.sql  001_routing_rules.sql  002_indexes_and_constraints.sql  003_auto_sync_enabled.sql  004_audit_log.sql  005_audit_log_purge.sql  006_bank_accounts_status_check.sql  007_count_transfers_as_income.sql  008_count_transfers_as_expense.sql  009_external_id_format_check.sql  010_mr_money_messages.sql  011_user_financial_profile.sql  012_aria_user_profile_snapshots.sql  013_bank_accounts_needs_reconnection.sql  014_merchant_category_votes.sql  015_merchant_aliases.sql
backend-python/scripts/: audit_rls_policies.py  check_gates.ps1  cleanup_bchile_accounts.sql  cleanup_duplicate_transactions.py  enqueue_categorize.py  rekey_bank_accounts.py  run_dev.py  smoke_router.py  test_bchile_scraper.py  test_bci_scraper.py  verify_encryption_compat.py  verify_fase12_schema.py  verify_merchant_priority_guard.py
backend-python/tests/: conftest.py
backend-python/tests/integration/: test_api_banking_banks.py  test_api_banking_connect.py  test_api_banking_sync_block.py  test_api_chat.py  test_api_internal_cron.py  test_api_operator_status.py  test_api_transactions.py  (+4 more)
(+195 files in other folders)
